fix style on mobile

--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -20,10 +20,6 @@
 }
 
 @media (max-width: 430px) {
-    .contact {
-        width: 60%;
-        margin: 0 auto;
-    }
     .site {
         padding: 1.5rem 1rem;
     }
